components/apps/elasticsearch-instance/base/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    hajimari.io/appName: Kibana
    hajimari.io/enable: "true"
spec:
  rules:
  - host: kibana.${CLUSTER_DOMAIN}
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name:  kibana-kb-http
              port:
                number: 5601      
  tls:
  - hosts:
    - kibana.${CLUSTER_DOMAIN}
    secretName: kibana-certificate-tls
